--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ log = { version = "0.4", features = ["std"] }
 libc = "0.2"
 ring = "0.16"
 criterion = { version = "0.3", optional = true }
+rustc-hash = "1"
 lazy_static = "1"
 qlog = { version = "0.2", optional = true }
 
